src/utils/globals.css
html {
  min-height: 100%;
}

body {
  background: var(--gray-00);
  color: var(--gray-99);
  font-family: sans-serif;
  min-height: 100%;
  margin: 0;
  overflow-x: hidden;
  user-select: none;
}

.slide-in-left {
  animation-duration: var(--transition-medium);
  animation-name: slide-in-left;
}

.slide-in-right {
  animation-duration: var(--transition-medium);
  animation-name: slide-in-right;
}

